--- a/src/main/resources/static/f/eh1/info1/test2/f74-head2.html
+++ b/src/main/resources/static/f/eh1/info1/test2/f74-head2.html
@@ -5,9 +5,11 @@
 			href="/"> <i class="fa fa-home"></i></a> :// {{page.request.viewKey}}
 	</div>
 	<div class="w3-col l5 m5 s5">
-		<span> <b class="w3-small">форма 74</b> : <a
-			href="/v/icpc2_test2"> введеня даних</a> | <a
-			href="/v/icpc2_test2_report"> звіт </a>
+		<span> <b class="w3-small"
+		style="text-transform: uppercase;"
+		>Журнал</b> : <a
+			href="/v/icpc2_test2"> реєстрація № 074/о</a> | <a
+			href="/v/icpc2_test2_report"> облік № 039/о </a>
 		</span>
 	</div>
 	<div class="w3-col l2 m2 s2 w3-right-align">
