f74 insert/update constraint cell value on flow

--- a/src/main/resources/static/f/eh1/info1/test3/dropdown_col_10771.html
+++ b/src/main/resources/static/f/eh1/info1/test3/dropdown_col_10771.html
@@ -14,7 +14,8 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr ng-repeat="row in dropdown_data.list" ng-click=""
+				<tr ng-repeat="row in dropdown_data.list" 
+				ng-click="icpc2_nakaz74.clickToSave.icpc2(row)"
 					class="w3-hover-light-gray">
 					<td ng-repeat="(col_k,v) in dropdown_data.col_keys" ng-switch
 						on="col_k">
@@ -27,4 +28,5 @@
 			</tbody>
 		</table>
 	</div>
+
 </div>
