close dropdown dialog with keyup <Escape>, +1.6.10 angularjs

--- a/src/main/resources/static/f/eh1/info1/test3/dropdown_col_10771.html
+++ b/src/main/resources/static/f/eh1/info1/test3/dropdown_col_10771.html
@@ -1,6 +1,7 @@
 <div>
 	<div class="w3-border-bottom">
 		<i class="fa fa-filter fa-3"></i> <input
+			ng-keyup="dropdown_data.keyUp($event)"
 			ng-model="dropdown_data.seekIcpc2" placeholder="знайти ICPC2">
 		--
 	</div>
