--- a/src/main/resources/static/f/eh1/info1/test3/dropdown_window.html
+++ b/src/main/resources/static/f/eh1/info1/test3/dropdown_window.html
@@ -1,5 +1,7 @@
 <div class="w3-dropdown-click">
-<a href="#">
+<a href="#" class="am-j2c"
+ng-keyup="dropdown_data.keyUp($event)"
+>
 	{{getColValue(r, col_k)}}
 </a>
 	<div class="w3-dropdown-content w3-border w3-card-4"
@@ -17,7 +19,7 @@
 		<div ng-switch-default>
 			<div ng-include="'/f/eh1/info1/test3/dropdown_'+col_k+'.html'"></div>
 		</div>
-		<div ng-switch-when="col_9775|and_age017_village"
+		<div ng-switch-when="col_9775|col_9776"
 			ng-switch-when-separator="|">
 			<div ng-repeat="(value,name) in col_values[col_k]"
 				ng-class="{'w3-light-green':r[col_k]==value}"
