--- a/src/main/resources/static/f/eh1/info1/test3/dropdown_reference2_table.html
+++ b/src/main/resources/static/f/eh1/info1/test3/dropdown_reference2_table.html
@@ -1,7 +1,7 @@
 <div>
 	<div class="w3-border-bottom">
 		<i class="fa fa-filter fa-3"></i> <input
-			ng-keyup="dropdown_data.keyUp($event)"
+			ng-keyup="keys_use.keyUp($event)"
 			ng-model="dropdown_data.seek[icpc2_nakaz74.selectedCell.col_k]"
 			placeholder="{{dropdown_data.seek_placeholder[icpc2_nakaz74.selectedCell.col_k]}}">
 		-1-
