--- a/src/main/resources/static/f/eh1/info1/test3/dropdown_window.html
+++ b/src/main/resources/static/f/eh1/info1/test3/dropdown_window.html
@@ -1,6 +1,11 @@
 <div class="w3-dropdown-click">
-	<a href="#" class="am-j2c" ng-keyup="dropdown_data.keyUp($event)">
-		{{getColValue(r, col_k)}} </a>
+	<a href="#" class="am-j2c" 
+	ng-keyup="keys_use.keyUp($event)">
+		{{getColValue(r, col_k)}} 
+		<span ng-if="!getColValue(r, col_k)" class="w3-tiny">
+		&lt;{{icpc2_nakaz74.data.col_keys[col_k]}}&gt;
+		</span>
+		</a>
 	<div class="w3-dropdown-content w3-border w3-card-4"
 		ng-style="dropdown_data.ngStyle(col_k)"
 		ng-if="icpc2_nakaz74.isCellSelect(row_k, col_k)"
@@ -23,7 +28,7 @@
 				ng-class="{'w3-light-green':r[col_k]==value}"
 				class="w3-hover-light-gray"
 				ng-click="icpc2_nakaz74.col_save(value,r,col_k)">
-				<a href="#" ng-keyup="dropdown_data.keyUp($event)">{{value}}</a>:
+				<a href="#" ng-keyup="keys_use.keyUp($event)">{{value}}</a>:
 				{{name}}
 			</div>
 		</div>
