--- a/src/main/resources/static/f/eh1/info1/test3/dropdown_window.html
+++ b/src/main/resources/static/f/eh1/info1/test3/dropdown_window.html
@@ -1,15 +1,15 @@
 <div class="w3-dropdown-click">
 	<a href="#" class="am-j2c" 
 	ng-keyup="keys_use.keyUp($event)">
-		{{getColValue(r, col_k)}} 
-		<span ng-if="!getColValue(r, col_k)" class="w3-tiny">
+		{{getColValue(row, col_k)}} 
+		<span ng-if="!getColValue(row, col_k)" class="w3-tiny">
 		&lt;{{icpc2_nakaz74.data.col_keys[col_k]}}&gt;
 		</span>
 		</a>
 	<div class="w3-dropdown-content w3-border w3-card-4"
 		ng-style="dropdown_data.ngStyle(col_k)"
-		ng-if="icpc2_nakaz74.isCellSelect(row_k, col_k)"
-		ng-class="{'w3-show':icpc2_nakaz74.isCellSelect(row_k, col_k)}"
+		ng-if="icpc2_nakaz74.isCellSelect(row_k, col_k, row)"
+		ng-class="{'w3-show':icpc2_nakaz74.isCellSelect(row_k, col_k, row)}"
 		on="col_k" ng-switch>
 
 		<div class="w3-tiny w3-gray" title=" — {{col_k}}">
@@ -25,9 +25,9 @@
 		</div>
 		<div ng-switch-when="col_9775|col_9776" ng-switch-when-separator="|">
 			<div ng-repeat="(value,name) in col_values[col_k]"
-				ng-class="{'w3-light-green':r[col_k]==value}"
+				ng-class="{'w3-light-green':row[col_k]==value}"
 				class="w3-hover-light-gray"
-				ng-click="icpc2_nakaz74.col_save(value,r,col_k)">
+				ng-click="icpc2_nakaz74.col_save(value,row,col_k)">
 				<a href="#" ng-keyup="keys_use.keyUp($event)">{{value}}</a>:
 				{{name}}
 			</div>
