--- a/src/main/resources/static/f/eh1/info1/test3/icpc2_test3.html
+++ b/src/main/resources/static/f/eh1/info1/test3/icpc2_test3.html
@@ -43,24 +43,24 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr ng-repeat="r in icpc2_nakaz74.data.list" ng-init="row_k=$index"
+		<tr ng-repeat="row in icpc2_nakaz74.data.list" ng-init="row_k=$index"
 			class="w3-hover-light-gray">
 			<td 
 			class="w3-small"
 			ng-class="{'am-b':row_k==icpc2_nakaz74.selectedCell.row_k}">{{row_k}}
 			</td>
 			<td
-				title="{{r.created | date : 'longDate'}}/{{r.updated | date : 'short'}}">{{r.created
+				title="{{row.created | date : 'longDate'}}/{{row.updated | date : 'short'}}">{{row.created
 				| date : "dd.MM"}} <span class="w3-tiny"
-				title="{{r.family_name}} {{
-              r.first_name}} {{
-              r.second_name}}">
-					{{r.family_name.substring(0,1)}}{{ r.first_name.substring(0,1)}}{{
-					r.second_name.substring(0,1)}} </span>
+				title="{{row.family_name}} {{
+              row.first_name}} {{
+              row.second_name}}">
+					{{row.family_name.substring(0,1)}}{{ row.first_name.substring(0,1)}}{{
+					row.second_name.substring(0,1)}} </span>
 			</td>
 			<td ng-repeat="col_k in icpc2_nakaz74.col_sort"
 				class="w3-border-bottom w3-hover-shadow"
-				ng-class="{'w3-border':icpc2_nakaz74.isCellSelect(row_k, col_k)}"
+				ng-class="{'w3-border':icpc2_nakaz74.isCellSelect(row_k, col_k, row)}"
 				ng-click="icpc2_nakaz74.selectCell(row_k, col_k)">
 
 				<div ng-include="'/f/eh1/info1/test3/dropdown_window.html'"></div>
