--- a/src/main/resources/static/f/eh1/info1/test3/dropdown_window.html
+++ b/src/main/resources/static/f/eh1/info1/test3/dropdown_window.html
@@ -20,10 +20,10 @@
 		<div ng-switch-default>
 			???
 		</div>
-		<div ng-switch-when="col_10766|col_10771" ng-switch-when-separator="|">
+		<div ng-switch-when="col_10766|col_10771|col_10807|col_10777" ng-switch-when-separator="|">
 		  <div ng-include="'/f/eh1/info1/test3/dropdown_reference2_table.html'"></div>
 		</div>
-		<div ng-switch-when="col_9775|col_9776" ng-switch-when-separator="|">
+		<div ng-switch-when="col_9775|col_9776|col_10900" ng-switch-when-separator="|">
 			<div ng-repeat="(value,name) in col_values[col_k]"
 				ng-class="{'w3-light-green':row[col_k]==value}"
 				class="w3-hover-light-gray"
