hrm_cards - відділ кадрів

--- a/src/main/resources/static/f/eh1/employee1/test1.html
+++ b/src/main/resources/static/f/eh1/employee1/test1.html
@@ -1,4 +1,5 @@
 <div am-obj="scopeObj" ng-repeat="employee in [scopeObj.docbody]">
+{{form_json_doc}}
 	<div class="w3-row">
 		<div class="w3-half">
 			<div ng-include="'/f/algoritmed/form/form_unified1_left.html'"
