--- a/src/main/resources/static/f/eh1/info1/test3/dropdown_window.html
+++ b/src/main/resources/static/f/eh1/info1/test3/dropdown_window.html
@@ -1,7 +1,7 @@
 <div class="w3-dropdown-click">
 	<a href="#" class="am-j2c" 
 	ng-keyup="keys_use.keyUp($event)">
-		{{getColValue(row, col_k)}} 
+		{{getColValue(row, col_k)}}
 		<span ng-if="!getColValue(row, col_k)" class="w3-tiny">
 		&lt;{{icpc2_nakaz74.data.col_keys[col_k]}}&gt;
 		</span>
@@ -24,7 +24,7 @@
 		  <div ng-include="'/f/eh1/info1/test3/dropdown_reference2_table.html'"></div>
 		</div>
 		<div ng-switch-when="col_9775|col_9776|col_10900" ng-switch-when-separator="|">
-			<div ng-repeat="(value,name) in col_values[col_k]"
+			<div ng-repeat="(value,name) in icpc2_nakaz74.col_values[col_k]"
 				ng-class="{'w3-light-green':row[col_k]==value}"
 				class="w3-hover-light-gray"
 				ng-click="icpc2_nakaz74.col_save(value,row,col_k)">
