--- a/src/main/resources/static/f/eh1/info2/hrm_cards/json_form1.html
+++ b/src/main/resources/static/f/eh1/info2/hrm_cards/json_form1.html
@@ -1,6 +1,9 @@
 <div class="w3-row">
 	<div class="w3-half">
-		<div ng-include="'/f/eh1/info2/hrm_cards/json_form.html'"></div>
+		<div ng-style="progr_am.fn.ngStyle('json_form')">
+			<div style="direction:ltr"
+			ng-include="'/f/eh1/info2/hrm_cards/json_form.html'"></div>
+		</div>
 	</div>
 	<div class="w3-half  w3-container w3-border-top">
 	a1
