hrm editObject navigation

--- a/src/main/resources/static/f/eh1/info2/hrm_cards/hrm_cards.html
+++ b/src/main/resources/static/f/eh1/info2/hrm_cards/hrm_cards.html
@@ -2,6 +2,10 @@
 	<a class="w3-hover-light-gray" title="" href="/v/info2"><i
 		class="fa fa-arrow-up"></i></a> <span
 		ng-include="'/f/eh1/info2/info2_group_links.html'"> </span>
+		<span
+		class="w3-display-topright"
+		 ng-include="'/f/algoritmed/lib/link-to-login2.html'">
+		 </span>
 </div>
 
 <div ng-repeat="(k,view) in progr_am.viewes">
