--- a/src/main/resources/static/f/eh1/info2/hrm_cards/hrm_menu.html
+++ b/src/main/resources/static/f/eh1/info2/hrm_cards/hrm_menu.html
@@ -1,10 +1,5 @@
-<div
-class="w3-blue-gray w3-card"
->
-меню:
-<i class="fa fa-filter fa-3"></i>
-<input
-class="w3-border"
-      ng-model="progr_am.viewes.hrm_menu.seek"
-      placeholder="{{progr_am.viewes.hrm_menu.seek_placeholder}}">
+<div class="w3-topbar w3-blue-gray w3-card">
+	меню: <i class="fa fa-filter fa-3"></i> <input class="w3-border"
+		ng-model="progr_am.viewes.hrm_menu.seek"
+		placeholder="{{progr_am.viewes.hrm_menu.seek_placeholder}}">
 </div>
