--- a/src/main/resources/static/f/eh1/info2/hrm_cards/json_form.html
+++ b/src/main/resources/static/f/eh1/info2/hrm_cards/json_form.html
@@ -1,8 +1,8 @@
 <div class="w3-hover-shadow "
 	ng-class="{
-  'w3-border-right':oToEdit != o,
+  'w3-border-right':oToEdit.o != o,
   }"
-	ng-click="progr_am.fn.openObjectToEdit(o)"
+	ng-click="progr_am.fn.openObjectToEdit(o,k0,k00)"
 	>
 	<span ng-repeat="(k,v) in o"> <!-- 
 		<div ng-if="k*1==k" class="w3-topbar w3-light-gray">
@@ -17,20 +17,17 @@
 <div ng-repeat="(k,v) in o" ng-if="v.isObject()">
 	<div class="w3-light-gray"
 	ng-class="{
-  'w3-border-right':oToEdit != o,
+  'w3-border-right':oToEdit.o != o,
   }"
 	>
-	<div
-	class="w3-hover-shadow "
-	ng-class="{'w3-blue-gray w3-card-4':oToEdit==o}"
-	ng-click="progr_am.fn.openObjectToEdit(o)"
-	>
-	<a href="#">
-			<b class="w3-tiny" ng-if="k*1==k">{{1+k}}</b> 
-			<b ng-if="k*1!=k"> {{progr_am.fn.amMapValue(k)}} </b>
-	</a>
+		<div class="w3-hover-shadow "
+			ng-class="{'w3-blue-gray w3-card-4':oToEdit.o==o}"
+			ng-click="progr_am.fn.openObjectToEdit(o,k0,k00)">
+			<a href="#" title="{{k}}"> <b class="w3-tiny" ng-if="k*1==k">{{1+k}}</b>
+				<b ng-if="k*1!=k"> {{progr_am.fn.amMapValue(k)}} </b>
+			</a>
+		</div>
 	</div>
-	</div>
-	<div class="w3-leftbar" n1g-repeat="o1 in [v]" ng-init="o=v"
+	<div class="w3-leftbar" n1g-repeat="o1 in [v]" ng-init="o=v;k00=k0;k0=k"
 		ng-include="'/f/eh1/info2/hrm_cards/json_form.html'"></div>
 </div>
