--- a/src/main/resources/static/f/eh1/info2/hrm_cards/json_oToEdit_edit.html
+++ b/src/main/resources/static/f/eh1/info2/hrm_cards/json_oToEdit_edit.html
@@ -1,11 +1,38 @@
 <div>
-	<div ng-repeat="(k,v) in oToEdit">
+	<div class="w3-blue-gray w3-card-4 w3-center am-b">
+		<span ng-if="oToEdit.k*1!=oToEdit.k">
+			{{progr_am.fn.amMapValue(oToEdit.k)}}</span> <span
+			ng-if="oToEdit.k*1==oToEdit.k">
+			{{progr_am.fn.amMapValue(oToEdit.k_parent)}} : {{1+oToEdit.k}} </span>
+	</div>
+	<div ng-if="progr_am.fn.isGroupToEdit()">
+		<div ng-repeat="(k,v) in oToEdit.o"
+			ng-click="progr_am.fn.openObjectToEdit(v,k,oToEdit.k)"
+			class="w3-border-bottom w3-hover-shadow">
+			<a href="#" class="w3-btn"> {{progr_am.fn.amMapValue(k)}}</a>
+		</div>
+	</div>
+	<div ng-if="oToEdit.o.isArray()">
+		<div ng-repeat="(k,v) in oToEdit.o" 
+		ng-click="progr_am.fn.openObjectToEdit(v,k,oToEdit.k)"
+		class="w3-border-bottom w3-hover-shadow">
+			<a href="#" class="w3-btn ">{{1+k}}</a>
+		</div>
+		<div class="w3-border-bottom w3-hover-shadow">
+			<a href="#" class="w3-btn ">+</a>
+		</div>
+	</div>
+	<div ng-repeat="(k,v) in oToEdit.o">
 		<div ng-if="!v.isObject()">
-			<b class="w3-tiny"> {{progr_am.fn.amMapValue(k)}} </b> 
-			<input
-				style="width: 100%;"
-				ng-if="!v.isObject()" ng-model="oToEdit.o[k]" class="w3-border">
+			<b class="w3-tiny">
+			 {{progr_am.fn.amMapValue(k)}} </b> <input
+				style="width: 100%;" ng-if="!v.isObject()" ng-model="oToEdit.o[k]"
+				class="w3-border">
 		</div>
 	</div>
 </div>
+<!-- 
+{{oToEdit.isArray()}}
+--
 {{oToEdit}}
+ -->
