--- a/src/main/resources/static/f/eh1/info2/hrm_cards/json_oToEdit_edit.html
+++ b/src/main/resources/static/f/eh1/info2/hrm_cards/json_oToEdit_edit.html
@@ -24,10 +24,9 @@
 	</div>
 	<div ng-repeat="(k,v) in oToEdit.o">
 		<div ng-if="!v.isObject()">
-			<b class="w3-tiny">
-			 {{progr_am.fn.amMapValue(k)}} </b> <input
-				style="width: 100%;" ng-if="!v.isObject()" ng-model="oToEdit.o[k]"
-				class="w3-border">
+			<b class="w3-tiny" title="{{k}}">
+				{{progr_am.fn.amMapValue(k)}} </b> <input style="width: 100%;"
+				ng-if="!v.isObject()" ng-model="oToEdit.dataObj[k]" class="w3-border">
 		</div>
 	</div>
 </div>
