--- a/src/main/resources/static/f/algoritmed/lib/link-to-login2.html
+++ b/src/main/resources/static/f/algoritmed/lib/link-to-login2.html
@@ -1,9 +1,9 @@
-<a class="w3-blue w3-border w3-round" ng-if="!principal"
+<a class="w3-blue w3-border w3-round" ng-if="!principal.principal"
 	href="/v/login1?pageKey={{request.viewKey}}"> Вхід: <i
 	class="fa fa-key" aria-hidden="true"></i> <i class="fa fa-caret-up"
 	aria-hidden="true"></i>
 </a>
-<a class="w3-blue w3-border w3-round" ng-if="principal"
+<a class="w3-blue w3-border w3-round" ng-if="principal.principal"
 	href="/v/login1?pageKey={{request.viewKey}}">
 	{{principalUser.username}} <i class="fa fa-caret-down"
 	aria-hidden="true"></i>
