--- a/src/main/resources/static/f/eh1/info2/hrm_cards/hrm_cards.html
+++ b/src/main/resources/static/f/eh1/info2/hrm_cards/hrm_cards.html
@@ -2,14 +2,23 @@
 	<a class="w3-hover-light-gray" title="" href="/v/info2"><i
 		class="fa fa-arrow-up"></i></a> <span
 		ng-include="'/f/eh1/info2/info2_group_links.html'"> </span>
-		<span
+		<span class="w3-text-light-gray">
+		|
+		</span>
+	<button ng-click="progr_am.hrm_cards.fn.save()"
+		class=" w3-border  w3-text-blue-gray ">
+		<i class="fa fa-save"></i> Зберегти
+	</button>
+	<span class="w3-tiny">
+	{{editDoc_CRC32}}
+	</span>
+	<span
 		class="w3-display-topright"
 		 ng-include="'/f/algoritmed/lib/link-to-login2.html'">
 		 </span>
 </div>
 
 <div ng-repeat="(k,view) in progr_am.viewes">
-	<div ng-repeat="data in [data[view.dataName]]" 
-	ng-init="o=data"
-    ng-include="view.ngInclude"></div>
+	<div ng-repeat="data in [data[view.dataName]]" ng-init="o=data"
+		ng-include="view.ngInclude"></div>
 </div>
