--- a/src/main/resources/static/f/eh1/info2/hrm_cards/json_form.html
+++ b/src/main/resources/static/f/eh1/info2/hrm_cards/json_form.html
@@ -1,25 +1,17 @@
 <div class="w3-hover-shadow "
-	ng-class="{
-  'w3-border-right':oToEdit.o != o,
-  }"
-	ng-click="progr_am.fn.openObjectToEdit(o,k0,k00)"
-	>
-	<span ng-repeat="(k,v) in o"> <!-- 
-		<div ng-if="k*1==k" class="w3-topbar w3-light-gray">
-			<b>{{k+1}} з {{eh_dictionaries.amMapValue(k0)}} </b>
-		</div> 
-	 --> <span ng-if="!v.isObject()"> <b class="w3-tiny">
-				{{progr_am.fn.amMapValue(k)}} </b> {{progr_am.fn.ehMap[k.toUpperCase()]?
-			progr_am.fn.ehMap[k.toUpperCase()].values[v]:(v?v:'___')}}
+	ng-class="{'w3-border-right':oToEdit.o != o, }"
+	ng-click="progr_am.fn.openObjectToEdit(o,k0,k00)">
+	<span ng-repeat="(k,v) in o"> <span
+		ng-if="!v.isObject()"> <b
+			class="w3-tiny w3-text-gray"> {{progr_am.fn.amMapValue(k)}} </b>
+			{{progr_am.fn.ehMap[k.toUpperCase()]?
+			progr_am.fn.ehMap[k.toUpperCase()].values[v]:(v?v:'___')}} 
 	</span>
 	</span>
 </div>
 <div ng-repeat="(k,v) in o" ng-if="v.isObject()">
 	<div class="w3-light-gray"
-	ng-class="{
-  'w3-border-right':oToEdit.o != o,
-  }"
-	>
+		ng-class="{'w3-border-right':oToEdit.o != o,}">
 		<div class="w3-hover-shadow "
 			ng-class="{'w3-blue-gray w3-card-4':oToEdit.o==o}"
 			ng-click="progr_am.fn.openObjectToEdit(o,k0,k00)">
@@ -28,6 +20,6 @@
 			</a>
 		</div>
 	</div>
-	<div class="w3-leftbar" n1g-repeat="o1 in [v]" ng-init="o=v;k00=k0;k0=k"
+	<div class="w3-leftbar" ng-init="o=v;k00=k0;k0=k"
 		ng-include="'/f/eh1/info2/hrm_cards/json_form.html'"></div>
 </div>
