--- a/src/main/resources/static/f/eh1/info2/hrm_cards/json_form.html
+++ b/src/main/resources/static/f/eh1/info2/hrm_cards/json_form.html
@@ -1,25 +1,26 @@
 <div class="w3-hover-shadow "
 	ng-class="{'w3-border-right':oToEdit.o != o, }"
-	ng-click="progr_am.fn.openObjectToEdit(o,k0,k00)">
+	ng-click="progr_am.fn.openObjectToEdit(o,k_parent,k)">
 	<span ng-repeat="(k,v) in o"> <span
 		ng-if="!v.isObject()"> <b
 			class="w3-tiny w3-text-gray"> {{progr_am.fn.amMapValue(k)}} </b>
-			{{progr_am.fn.ehMap[k.toUpperCase()]?
-			progr_am.fn.ehMap[k.toUpperCase()].values[v]:(v?v:'___')}} 
+			{{progr_am.fn.getEditDocObj(k_parent)[k]?progr_am.fn.getEditDocObj(k_parent)[k]
+			:'___'}}<span class="w3-text-gray">{{$last?'':','}} </span>
 	</span>
 	</span>
 </div>
 <div ng-repeat="(k,v) in o" ng-if="v.isObject()">
 	<div class="w3-light-gray"
+		title="{{k_parent}}"
 		ng-class="{'w3-border-right':oToEdit.o != o,}">
 		<div class="w3-hover-shadow "
 			ng-class="{'w3-blue-gray w3-card-4':oToEdit.o==o}"
-			ng-click="progr_am.fn.openObjectToEdit(o,k0,k00)">
+			ng-click="progr_am.fn.openObjectToEdit(o,k_parent,k)">
 			<a href="#" title="{{k}}"> <b class="w3-tiny" ng-if="k*1==k">{{1+k}}</b>
 				<b ng-if="k*1!=k"> {{progr_am.fn.amMapValue(k)}} </b>
 			</a>
 		</div>
 	</div>
-	<div class="w3-leftbar" ng-init="o=v;k00=k0;k0=k"
+	<div class="w3-leftbar" ng-init="o=v;k_parent=k_parent+'|'+k"
 		ng-include="'/f/eh1/info2/hrm_cards/json_form.html'"></div>
 </div>
