--- a/src/main/resources/static/f/eh1/info2/hrm_cards/json_oToEdit_edit.html
+++ b/src/main/resources/static/f/eh1/info2/hrm_cards/json_oToEdit_edit.html
@@ -3,18 +3,19 @@
 		<span ng-if="oToEdit.k*1!=oToEdit.k">
 			{{progr_am.fn.amMapValue(oToEdit.k)}}</span> <span
 			ng-if="oToEdit.k*1==oToEdit.k">
-			{{progr_am.fn.amMapValue(oToEdit.k_parent)}} : {{1+oToEdit.k}} </span>
+			{{progr_am.fn.amMapValue(progr_am.fn.oToEdit_k_parent())}} : {{1+oToEdit.k}} 
+			</span>
 	</div>
 	<div ng-if="progr_am.fn.isGroupToEdit()">
 		<div ng-repeat="(k,v) in oToEdit.o"
-			ng-click="progr_am.fn.openObjectToEdit(v,k,oToEdit.k)"
+			ng-click="progr_am.fn.openObjectToEdit(v,oToEdit.k_parent+'|'+k,k)"
 			class="w3-border-bottom w3-hover-shadow">
 			<a href="#" class="w3-btn"> {{progr_am.fn.amMapValue(k)}}</a>
 		</div>
 	</div>
 	<div ng-if="oToEdit.o.isArray()">
 		<div ng-repeat="(k,v) in oToEdit.o" 
-		ng-click="progr_am.fn.openObjectToEdit(v,k,oToEdit.k)"
+		ng-click="progr_am.fn.openObjectToEdit(v,oToEdit.k_parent+'|'+k,k)"
 		class="w3-border-bottom w3-hover-shadow">
 			<a href="#" class="w3-btn ">{{1+k}}</a>
 		</div>
@@ -30,8 +31,3 @@
 		</div>
 	</div>
 </div>
-<!-- 
-{{oToEdit.isArray()}}
---
-{{oToEdit}}
- -->
