--- a/src/main/resources/static/f/eh1/info2/hrm_cards/json_form.html
+++ b/src/main/resources/static/f/eh1/info2/hrm_cards/json_form.html
@@ -1,4 +1,4 @@
-<div class="w3-hover-shadow "
+<div class="w3-hover-shadow  "
 	ng-class="{'w3-border-right':oToEdit.o != o, }"
 	ng-click="progr_am.fn.openObjectToEdit(o,k_parent,k)">
 	<span ng-repeat="(k,v) in o"> <span
@@ -13,7 +13,7 @@
 	<div class="w3-light-gray"
 		title="{{k_parent}}"
 		ng-class="{'w3-border-right':oToEdit.o != o,}">
-		<div class="w3-hover-shadow "
+		<div class="w3-hover-shadow w3-hover-text-gray"
 			ng-class="{'w3-blue-gray w3-card-4':oToEdit.o==o}"
 			ng-click="progr_am.fn.openObjectToEdit(o,k_parent,k)">
 			<a href="#" title="{{k}}"> <b class="w3-tiny" ng-if="k*1==k">{{1+k}}</b>
