--- a/src/main/resources/static/f/eh1/info2/hrm_cards/hrm_cards.html
+++ b/src/main/resources/static/f/eh1/info2/hrm_cards/hrm_cards.html
@@ -1,4 +1,4 @@
-<div class="w3-border-bottom" ng-repeat="group_v in [eHealth.hrm]">
+<div class="w3-border-bottom w3-display-container" ng-repeat="group_v in [eHealth.hrm]">
 	<a class="w3-hover-light-gray" title="" href="/v/info2"><i
 		class="fa fa-arrow-up"></i></a> <span
 		ng-include="'/f/eh1/info2/info2_group_links.html'"> </span>
