--- a/src/main/resources/static/f/eh1/info2/hrm_cards/json_oToEdit_edit.html
+++ b/src/main/resources/static/f/eh1/info2/hrm_cards/json_oToEdit_edit.html
@@ -1,10 +1,14 @@
 <div>
-	<div class="w3-blue-gray w3-card-4 w3-center am-b">
-		<span ng-if="oToEdit.k*1!=oToEdit.k">
+	<div class="w3-blue-gray w3-card-4 w3-center am-b w3-display-container">
+		<span class="w3-display-topleft " ng-if="oToEdit"> &nbsp; <span
+			ng-click="progr_am.fn.clear_oToEdit()" class="w3-hover-light-gray">
+				<i class="fa fa-arrow-up"></i>
+		</span>
+		</span> <span ng-if="oToEdit.k*1!=oToEdit.k">
 			{{progr_am.fn.amMapValue(oToEdit.k)}}</span> <span
 			ng-if="oToEdit.k*1==oToEdit.k">
-			{{progr_am.fn.amMapValue(progr_am.fn.oToEdit_k_parent())}} : {{1+oToEdit.k}} 
-			</span>
+			{{progr_am.fn.amMapValue(progr_am.fn.oToEdit_k_parent())}} :
+			{{1+oToEdit.k}} </span>
 	</div>
 	<div ng-if="progr_am.fn.isGroupToEdit()">
 		<div ng-repeat="(k,v) in oToEdit.o"
@@ -29,5 +33,29 @@
 				{{progr_am.fn.amMapValue(k)}} </b> <input style="width: 100%;"
 				ng-if="!v.isObject()" ng-model="oToEdit.dataObj[k]" class="w3-border">
 		</div>
+	</div>
+</div>
+<div ng-if="!oToEdit">
+	<div ng-repeat="(k,v) in data" ng-init="k_parent=k_parent+'|'+k">
+		<div ng-click="progr_am.fn.openObjectToEdit(v,k_parent,k)"
+			class="w3-hover-shadow w3-hover-text-gray">{{progr_am.fn.amMapValue(k)}}</div>
+		<ul class="w3-ul">
+			<li class="w3-hover-shadow" ng-repeat="(k1,v1) in v"
+				ng-init="k_parent=k_parent+'|'+k1" ng-if="v1.isObject()">
+				<div ng-click="progr_am.fn.openObjectToEdit(v1,k_parent,k1)"
+				title="{{k_parent+'.'+k1}}"
+					class="w3-hover-text-gray">
+					{{progr_am.fn.amMapValue(k1)}}</div>
+				<ul class="w3-ul">
+					<li class="w3-hover-shadow" ng-repeat="(k2,v2) in v1"
+						ng-init="k_parent=k_parent+'|'+k2" ng-if="v2.isObject()">
+						<div ng-click="progr_am.fn.openObjectToEdit(v2,k_parent,k2)"
+						title="{{k_parent+'.'+k2}}"
+							class="w3-hover-text-gray">
+							{{progr_am.fn.amMapValue(k2)}}</div>
+					</li>
+				</ul>
+			</li>
+		</ul>
 	</div>
 </div>
