--- a/src/main/resources/static/f/eh1/info2/hrm_cards/json_form.html
+++ b/src/main/resources/static/f/eh1/info2/hrm_cards/json_form.html
@@ -1,11 +1,16 @@
 <div class="w3-hover-shadow  "
-	ng-class="{'w3-border-right':oToEdit.o != o, }"
+	ng-class="{
+	 'w3-border-right':oToEdit.o != o, 
+	 'w3-border-bottom w3-border-blue-gray':oToEdit.o == o, 
+	 'w3-topbar':oToEdit.o == o && k0*1==k0, 
+	}"
 	ng-click="progr_am.fn.openObjectToEdit(o,k_parent,k)">
+	<b ng-if="k0*1==k0" class="w3-tiny"> {{1+k0}}. </b> 
 	<span ng-repeat="(k,v) in o"> <span
 		ng-if="!v.isObject()"> <b
 			class="w3-tiny w3-text-gray"> {{progr_am.fn.keyTranslate(k)}} </b>
-			 {{progr_am.fn.valueTranslate(k_parent, k)}} 
-			<span class="w3-text-gray">{{$last?'':','}} </span>
+			 {{progr_am.fn.valueTranslate(k_parent, k)
+			 }}<span class="w3-text-gray">{{$last?'':','}} </span>
 	</span>
 	</span>
 </div>
@@ -16,11 +21,14 @@
 		<div class="w3-hover-shadow w3-hover-text-gray"
 			ng-class="{'w3-blue-gray w3-card-4':oToEdit.o==o}"
 			ng-click="progr_am.fn.openObjectToEdit(o,k_parent,k)">
-			<a href="#" title="{{k}}"> <b class="w3-tiny" ng-if="k*1==k">{{1+k}}</b>
+			<a href="#" title="{{k}}"> 
+			<!-- 
+			<b class="w3-tiny" ng-if="k*1==k">{{1+k}}</b>
+			 -->
 				<b ng-if="k*1!=k"> {{progr_am.fn.keyTranslate(k)}} </b>
 			</a>
 		</div>
 	</div>
-	<div class="w3-leftbar" ng-init="o=v;k_parent=k_parent+'|'+k"
+	<div class="w3-leftbar" ng-init="o=v;k_parent=k_parent+'|'+k;k0=k"
 		ng-include="'/f/eh1/info2/hrm_cards/json_form.html'"></div>
 </div>
