--- a/src/main/resources/static/f/eh1/info2/hrm_cards/json_form.html
+++ b/src/main/resources/static/f/eh1/info2/hrm_cards/json_form.html
@@ -25,7 +25,8 @@
 		<div class="w3-hover-shadow w3-hover-text-gray"
 			ng-class="{'w3-blue-gray w3-card-4':oToEdit.o==o}"
 			ng-click="progr_am.fn.openObjectToEdit(o,k_parent,k)">
-			<a href="#" title="{{k}}"> 
+			<a href="#" title="{{k}}"
+			> 
 				<b ng-if="k*1!=k"> {{progr_am.fn.keyTranslate(k)}} </b>
 			</a>
 		</div>
