data.fn.isEditRow(row) correct

--- a/src/main/resources/static/f/eh1/info2/hrm_cards/j2c_table.html
+++ b/src/main/resources/static/f/eh1/info2/hrm_cards/j2c_table.html
@@ -14,14 +14,20 @@ class="w3-card"
 			<tr ng-repeat="row in data.data.list" ng-init="row_k=$index"
 				n1g-class="{'w3-blue-gray':data.fn.isEditRow(row)}"
 				class="w3-hover-light-gray">
-				<td class="w3-small" ng-class="{'w3-gray ':data.fn.isEditRow(row)}">{{row_k}}
-				</td>
+				<td class="w3-small" ng-class="{'w3-gray ':data.fn.isEditRow(row)}"
+				>{{row_k}}</td>
 				<td class="w3-border-bottom w3-hover-shadow"
 					ng-class="{'w3-topbar w3-bottombar':data.fn.isEditRow(row)}"
 					ng-repeat="col_k in data.col_sort" on="col_k" ng-switch>
-					<div ng-switch-default>{{row[col_k]}}</div> <a
+					<div ng-switch-default>
+						{{row[col_k]}} {{data.fn_col[col_k](row)}}
+						<div ng-include="data.include_cols"
+						on="col_k" ng-switch
+						></div>
+					</div> <a
 					ng-switch-when="person_id" href="?person_id={{row[col_k]}}">
-						{{row[col_k]}} </a>
+						{{row[col_k]}} </a> <a ng-switch-when="division_id"
+					href="?division_id={{row[col_k]}}"> {{row[col_k]}} </a>
 				</td>
 			</tr>
 		</tbody>
