msp_division work

--- a/src/main/resources/static/f/eh1/lib/table_json_editor.html
+++ b/src/main/resources/static/f/eh1/lib/table_json_editor.html
@@ -6,7 +6,7 @@ ng-repeat="group_v in [eHealth.pageGroup()]">
     <span class="w3-text-light-gray">
     |
     </span>
-  <button ng-click="progr_am.hrm_cards.fn.save()"
+  <button ng-click="progr_am.fn.save()"
     class=" w3-border  w3-text-blue-gray ">
     <i class="fa fa-save"></i> Зберегти
   </button>
